[gd_scene load_steps=6 format=3 uid="uid://dodqa0hhxsm5p"]

[ext_resource type="Script" uid="uid://ceyrfq2fmjgux" path="res://Scripts/UI/tela_inicial.gd" id="1_vcnny"]
[ext_resource type="Texture2D" uid="uid://b85vwgmgm8bwx" path="res://Assets/Telas/Tela_sem_nada.jpg" id="2_vt6gu"]
[ext_resource type="Texture2D" uid="uid://b1stdee72g4e2" path="res://Assets/Fundo do login.png" id="3_bc6dj"]
[ext_resource type="FontFile" uid="uid://bry6apua5ag3h" path="res://Assets/Fonte/TooMuchInk.ttf" id="4_t0id6"]
[ext_resource type="Texture2D" uid="uid://bgmg64qvyuyj5" path="res://Assets/Logo.png" id="5_eqttr"]

[node name="Tela inicial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vcnny")

[node name="TelaSemNada" type="Sprite2D" parent="."]
position = Vector2(576.75, 350)
scale = Vector2(1.61921, 1.42276)
texture = ExtResource("2_vt6gu")

[node name="FundoDoLogin" type="Sprite2D" parent="."]
position = Vector2(788, 477)
texture = ExtResource("3_bc6dj")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(776, 216)
texture = ExtResource("5_eqttr")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 639.0
offset_top = 289.0
offset_right = 946.0
offset_bottom = 673.0
alignment = 1

[node name="Modo História" type="Button" parent="HBoxContainer" groups=["button"]]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("4_t0id6")
theme_override_font_sizes/font_size = 50
text = "Story Mode"
flat = true

[node name="Multijogador" type="Button" parent="HBoxContainer" groups=["button"]]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("4_t0id6")
theme_override_font_sizes/font_size = 50
text = "Multiplayer"
flat = true

[node name="Opções" type="Button" parent="HBoxContainer" groups=["button"]]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("4_t0id6")
theme_override_font_sizes/font_size = 50
text = "Options
"
flat = true

[node name="Sair" type="Button" parent="HBoxContainer" groups=["button"]]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("4_t0id6")
theme_override_font_sizes/font_size = 50
text = "Quit"
flat = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1056.0
offset_top = 607.0
offset_right = 1150.0
offset_bottom = 630.0
theme_override_fonts/font = ExtResource("4_t0id6")
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/Modo História" to="." method="_on_modo_história_pressed"]
[connection signal="pressed" from="HBoxContainer/Multijogador" to="." method="_on_multijogador_pressed"]
[connection signal="pressed" from="HBoxContainer/Opções" to="." method="_on_opções_pressed"]
[connection signal="pressed" from="HBoxContainer/Sair" to="." method="_on_sair_pressed"]
